# AED-exercises

./: zinjai-add-aed-20180920.zcp
Clases  (.cpp)/: AB POR CELDAS ENLAZADAS SIMPLES.cpp  AOO.cpp  LISTAS POR CELDAS ENLAZADAS.cpp  SET POR ABB.cpp  STACK AND QUEUE.cpp
Guia TP 2/: 1_e.cpp  2_a_1.cpp  2_a_2.cpp  2_a_3.cpp  2_a_6.cpp  2_b_2.cpp  2_b_4.cpp  2_c_1.cpp  2_c_2.cpp  2_c_5.cpp
Guia TP 2/Códigos Guía 2 2024 (Resueltos por la cátedra)/: gtp2_a_ej01.cpp  gtp2_a_ej03.cpp  gtp2_a_ej04.cpp  gtp2_a_ej05.cpp  gtp2_a_ej06.cpp  gtp2_a_ej06_template.cpp  gtp2_a_ej07.cpp  gtp2_a_ej07_template.cpp  gtp2_a_ej08.cpp  gtp2_a_ej09.cpp  gtp2_a_ej09_template.cpp  gtp2_a_ej10_2024.cpp  gtp2_a_ej10_template.cpp  gtp2_a_ej11_2024.cpp  gtp2_a_ej11_template.cpp  gtp2_a_ej12_2024.cpp  gtp2_a_ej12_template.cpp  gtp2_a_ej13_2024.cpp  gtp2_a_ej13_template.cpp  gtp2_a_ej14_template.cpp  gtp2_a_ej15_2024.cpp  gtp2_a_ej15_template.cpp  gtp2_b_ej01_2024.cpp  gtp2_b_ej01_template.cpp  gtp2_b_ej02_2024.cpp  gtp2_b_ej02_template.cpp  gtp2_b_ej03_2024.cpp  gtp2_b_ej03_template.cpp  gtp2_b_ej04_2024.cpp  gtp2_b_ej04_template.cpp  gtp2_b_ej05_2024.cpp  gtp2_b_ej05_template.cpp  gtp2_b_ej06_template.cpp  gtp2_c_ej01_template.cpp  gtp2_c_ej02_template.cpp  gtp2_c_ej03_template.cpp  gtp2_c_ej04_template.cpp  gtp2_c_ej05_template.cpp  gtp2_c_ej06_template.cpp  gtp2_c_ej07_template.cpp  (+5 more)
Guía TP 3/: 2_b_2_a.cpp  2_b_2_d.cpp
Guía TP 4/: 2_a_1_a.cpp  2_a_1_b.cpp  2_a_1_c.cpp  2_a_2.cpp  2_a_5.cpp
TPLs/tpl1-2024/tpl1-2024-compact_queues/aedtools/: CMakeLists.txt  evalbase.hpp  util.hpp
(+292 files in other folders)
